Win32-gcc updates

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,10 +2,10 @@
 export CFLAGS += -Wall -Wextra
 
 test: test.o ../libaw-lma.a
-	clang -o $@ $^
+	$(CC) $(LDFLAGS) -o $@ $^
 
 %.o: %.c
-	clang $(CFLAGS) -I.. -c $< -o $@
+	$(CC) $(CFLAGS) -I.. -c $< -o $@
 
 ../libaw-lma.a:
 	$(MAKE) -C..
